--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,24 @@ button {
    
     transition: transform 200ms ease;
     padding: 30px;
+    display: flex;
+    flex-wrap: wrap;
 
 
     
+  }
+
+  .poke__name{
+    
+    width: 50%;
+    height: 250px;
+border-radius: 9px;
+padding: 15px;
+  }
+  .movem__pok{
+    
+    width: 50%;
+    height: 300px;
+    border-radius: 9px;
+    padding: 15px;
   }
